--- a/demo-1/pom.xml
+++ b/demo-1/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example</groupId>
 	<artifactId>prueba</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>demo-1</name>
 	<description>Prueba primer projecto</description>
 	<properties>
@@ -47,7 +48,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
